Prevent headers from wrapping

--- a/content/assets/style/screen.css
+++ b/content/assets/style/screen.css
@@ -79,6 +79,7 @@ body {
 
 #header {
     padding: 0 0 0 200px;
+    margin-right: -60px;
 
     position: relative;
 
